--- a/mars-weather-app/package.json
+++ b/mars-weather-app/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-geolocation-api": "^0.1.17"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
